scalaplugin/src/test/resource/acyclic/src/test/resources/fail/halfpackagecycle/A.scala
package fail.halfpackagecycle

class A {
  val thing = c.C1
}
